--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+/* index.css */
+body {
+  @apply bg-gradient-to-r from-[#1A2A6C] via-[#B21F1F] to-[#FDBB2D] min-h-screen;
+}
 
 
 *{
