--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@
 body {
   min-height: 100vh;
 }
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
